Fixed horizontal centring glitch with overflow

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -153,6 +153,7 @@ h4::before {
 
 html {
   height: 100%;
+  overflow-y: scroll;
 }
 
 iframe {
